[build-system]
requires = ["setuptools>=61.0", "wheel", "torch", "torchvision"]
build-backend = "setuptools.build_meta"

[project]
name = "groundingdino"
version = "0.1.0"
description = "open-set object detector"
authors = [
  { name = "International Digital Economy Academy" },
  { name = "Shilong Liu" },
]
license = { file = "LICENSE" }
urls = { "Homepage" = "https://github.com/IDEA-Research/GroundingDINO" }
requires-python = ">=3.8"
dependencies = [
  "torch",
  "torchvision",
  "transformers",
  "addict",
  "yapf",
  "timm",
  "pycocotools",
]

[tool.setuptools.packages.find]
exclude = ["configs", "tests"]
